[project]
name = "scenescout"
version = "1.1.0"
description = "A tool to search for specific scenes through keywords."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=17.0.0",
    "imageio-ffmpeg>=0.5.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "python-vlc>=3.0.21203",
    "requests>=2.28.0",
    "scenedetect>=0.6.7.1",
    "toml>=0.10.2",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "tkinterdnd2>=0.3.0",
    "ttkthemes",
    "hf-transfer",
]

[project.optional-dependencies]
cpu       = ["torch==2.11.0"]
cu126     = ["torch==2.11.0 ; sys_platform != 'darwin'"]
cu126-trt = ["torch==2.11.0 ; sys_platform != 'darwin'", "torch-tensorrt ; sys_platform != 'darwin'"]
cu130     = ["torch==2.11.0 ; sys_platform != 'darwin'"]
cu130-trt = ["torch==2.11.0 ; sys_platform != 'darwin'", "torch-tensorrt ; sys_platform != 'darwin'"]
rocm      = ["torch==2.11.0 ; sys_platform != 'darwin'", "triton-rocm==3.6.0 ; sys_platform == 'linux'"]
xpu       = ["torch==2.11.0 ; sys_platform != 'darwin'", "triton-xpu==3.7.0 ; sys_platform != 'darwin'"]
dml       = ["torch==2.4.1", "torch-directml ; sys_platform == 'win32'"]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu126-trt" },
    { extra = "cu130" },
    { extra = "cu130-trt" },
    { extra = "dml" },
    { extra = "rocm" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu126", extra = "cu126-trt", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130-trt", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-xpu",   extra = "xpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cpu",   extra = "dml" },
]

triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true