[project]
name = "scenescout"
version = "1.3.0"
description = "A tool to search for specific scenes through natural language usage."
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "av>=17.0.0",
    "imageio-ffmpeg>=0.5.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "python-vlc>=3.0.21203",
    "requests>=2.28.0",
    "scenedetect>=0.6.7.1",
    "toml>=0.10.2",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "hf-transfer",
    "pyside6-essentials>=6.11.1",
    "qt-material>=2.17",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
cpu       = [
    "torch==2.11.0", 
    "torchvision==0.26.0"
]
mac-intel = [
    "torch==2.2.2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision==0.17.2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2.0 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers<=4.44.2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sentencepiece>=0.1.99 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "protobuf>=3.20.0 ; sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
cu126     = [
    "torch==2.11.0+cu126 ; sys_platform != 'darwin'",
    "torchvision ; sys_platform != 'darwin'",
    "xformers ; sys_platform != 'darwin'"
]
cu130     = [
    "torch==2.11.0+cu130 ; sys_platform != 'darwin'",
    "torchvision ; sys_platform != 'darwin'",
    "xformers ; sys_platform != 'darwin'"
]
cu130-trt = [
    "torch==2.11.0+cu130 ; sys_platform != 'darwin'",
    "torchvision ; sys_platform != 'darwin'",
    "xformers ; sys_platform != 'darwin'",
    "torch-tensorrt==2.11.0 ; sys_platform != 'darwin'"
]
dml = [
    "torch==2.4.1 ; sys_platform == 'win32' and python_version < '3.11'",
    "torchvision ; sys_platform == 'win32' and python_version < '3.11'",
    "torch-directml==0.2.5.dev240914 ; sys_platform == 'win32' and python_version < '3.11'"
]
rocm      = [
    "torch ; sys_platform == 'linux'",
    "torchvision ; sys_platform == 'linux'",
    "pytorch-triton-rocm==3.2.0 ; sys_platform == 'linux'"
]
xpu       = [
    "torch>=2.5.0 ; sys_platform != 'darwin'",
    "torchvision ; sys_platform != 'darwin'",
    "intel-extension-for-pytorch>=2.5.0 ; sys_platform != 'darwin'"
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]

conflicts = [
  [
    { extra = "cpu" },
    { extra = "mac-intel" },
    { extra = "cu126" },
    { extra = "cu130" },
    { extra = "cu130-trt" },
    { extra = "dml" },
    { extra = "rocm" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130-trt", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "intel-xpu",     extra = "xpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cpu",   extra = "dml" },
]

torchvision = [
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130-trt", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "intel-xpu",     extra = "xpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cpu",   extra = "dml" },
]

pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform != 'darwin'" },
]

tensorrt = { index = "nvidia" }
tensorrt-cu13 = { index = "nvidia" }
tensorrt-cu13-libs = { index = "nvidia" }
tensorrt-cu13-bindings = { index = "nvidia" }

intel-extension-for-pytorch = [
  { index = "intel-xpu", extra = "xpu", marker = "sys_platform != 'darwin'" }
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "intel-xpu"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
explicit = true